--- a/vignettes/lncGSEA.Rmd
+++ b/vignettes/lncGSEA.Rmd
@@ -109,7 +109,7 @@ The first few rows ranked gene list data frame looks like below:
 By setting `pathway = "HALLMARK_ANDROGEN_RESPONSE"` in `lnc_gsea`, you can have an enrichement plot of AR pathway, which is displayed as below:
 
 ```{r, echo = FALSE, out.height= "50%", out.width="50%" }
-knitr::include_graphics("HALLMARK_ANDROGEN_RESPONSE_ENST00000561519.png")
+knitr::include_graphics(system.file("extdata", "HALLMARK_ANDROGEN_RESPONSE_ENST00000561519.png", package = "lncGSEA"))
 
 ```
 
@@ -122,7 +122,8 @@ plot_gsea("ENST00000561519.5_PRAD_cor.txt")
 ```
 
 ```{r, echo = FALSE, out.height = "50%", out.width="50%"}
-knitr::include_graphics("ARLNC1_plot_example.png")
+knitr::include_graphics(system.file("extdata", 
+                                    "ARLNC1_plot_example.png", package = "lncGSEA"))
 
 ```
 
@@ -147,7 +148,7 @@ plot_multiCompare(arlnc1.df)
 ```
 
 ```{r, echo = FALSE, out.height = "50%", out.width="50%"}
-knitr::include_graphics("ARLNC1_3cohorts_ht.png")
+knitr::include_graphics(system.file("extdata", "ARLNC1_3cohorts_ht.png", package = "lncGSEA"))
 
 ```
 
@@ -164,7 +165,7 @@ plot_multiCompare(prad)
 ```
 
 ```{r, echo = FALSE, out.height = "50%", out.width="50%"}
-knitr::include_graphics("multiple_lncRNA_prad.png")
+knitr::include_graphics(system.file("extdata", "multiple_lncRNA_prad.png", package = "lncGSEA"))
 
 ```
 
@@ -195,6 +196,7 @@ plot_gsea("PB.69_PRAD_cor.txt")
 ```
 
 ```{r, echo = FALSE, out.height = "50%", out.width="50%"}
-knitr::include_graphics("PB69.example.png")
+knitr::include_graphics(system.file("extdata", "PB69.example.png", package = "lncGSEA"))
+
 ```
 
